// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio组件 快照测试 基本使用 1`] = `
Array [
  <span
    checked={false}
<<<<<<< HEAD
    className="sc-AxjAm hmYuEz sinoui-base-button sc-AxgMl fBbXlr sinoui-radio"
=======
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio"
>>>>>>> origin/bottomNavigation
    color="primary"
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
<<<<<<< HEAD
      className="sc-AxirZ eBpvqz sinoui-svg-icon"
=======
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <input
<<<<<<< HEAD
      className="sc-AxheI ipwklB sinoui-radio__input"
=======
      className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
      onChange={[Function]}
      type="radio"
    />
  </span>,
  <span
    checked={true}
<<<<<<< HEAD
    className="sc-AxjAm hmYuEz sinoui-base-button sc-AxgMl ccleF sinoui-radio sinoui-radio--checked"
=======
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 bxzqbt sinoui-radio sinoui-radio--checked"
>>>>>>> origin/bottomNavigation
    color="primary"
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
<<<<<<< HEAD
      className="sc-AxirZ eBpvqz sinoui-svg-icon"
=======
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <input
      checked={true}
<<<<<<< HEAD
      className="sc-AxheI ipwklB sinoui-radio__input"
=======
      className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
      onChange={[Function]}
      type="radio"
    />
  </span>,
]
`;

exports[`Radio组件 快照测试 带文字单选框 1`] = `
Array [
  <label
<<<<<<< HEAD
    className="sc-AxhCb sc-AxhUy gRQlL sinoui-form-control-label"
  >
    <span
      checked={false}
      className="sc-AxjAm hmYuEz sinoui-base-button sc-AxgMl fBbXlr sinoui-radio"
=======
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 cZgDxL sinoui-form-control-label"
  >
    <span
      checked={false}
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio"
>>>>>>> origin/bottomNavigation
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
<<<<<<< HEAD
        className="sc-AxirZ eBpvqz sinoui-svg-icon"
=======
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
<<<<<<< HEAD
        className="sc-AxheI ipwklB sinoui-radio__input"
=======
        className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
        onChange={[Function]}
        type="radio"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框1
    </span>
  </label>,
  <label
<<<<<<< HEAD
    className="sc-AxhCb sc-AxhUy gRQlL sinoui-form-control-label"
  >
    <span
      checked={true}
      className="sc-AxjAm hmYuEz sinoui-base-button sc-AxgMl ccleF sinoui-radio sinoui-radio--checked"
=======
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 cZgDxL sinoui-form-control-label"
  >
    <span
      checked={true}
      className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 bxzqbt sinoui-radio sinoui-radio--checked"
>>>>>>> origin/bottomNavigation
      color="primary"
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
<<<<<<< HEAD
        className="sc-AxirZ eBpvqz sinoui-svg-icon"
=======
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        checked={true}
<<<<<<< HEAD
        className="sc-AxheI ipwklB sinoui-radio__input"
=======
        className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
        onChange={[Function]}
        type="radio"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框2
    </span>
  </label>,
]
`;

exports[`Radio组件 快照测试 指定颜色 1`] = `
Array [
  <label
<<<<<<< HEAD
    className="sc-AxhCb sc-AxhUy ddNrMj sinoui-form-control-label"
=======
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 AQksP sinoui-form-control-label"
>>>>>>> origin/bottomNavigation
    disabled={true}
  >
    <span
      checked={false}
<<<<<<< HEAD
      className="sc-AxjAm gIJowi sinoui-base-button sc-AxgMl fBbXlr sinoui-radio sinoui-radio--disabled"
=======
      className="BaseButton__BaseButtonLayout-wk8p17-0 GZpaL sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio sinoui-radio--disabled"
>>>>>>> origin/bottomNavigation
      color="primary"
      disabled={true}
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
<<<<<<< HEAD
        className="sc-AxirZ eBpvqz sinoui-svg-icon"
=======
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
<<<<<<< HEAD
        className="sc-AxheI ipwklB sinoui-radio__input"
=======
        className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
        disabled={true}
        onChange={[Function]}
        type="radio"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框1
    </span>
  </label>,
  <span
    checked={true}
<<<<<<< HEAD
    className="sc-AxjAm hmYuEz sinoui-base-button sc-AxgMl ccleF sinoui-radio sinoui-radio--checked"
=======
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 bxzqbt sinoui-radio sinoui-radio--checked"
>>>>>>> origin/bottomNavigation
    color="primary"
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
<<<<<<< HEAD
      className="sc-AxirZ eBpvqz sinoui-svg-icon"
=======
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <input
      checked={true}
<<<<<<< HEAD
      className="sc-AxheI ipwklB sinoui-radio__input"
=======
      className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
      onChange={[Function]}
      type="radio"
    />
  </span>,
  <span
    checked={true}
<<<<<<< HEAD
    className="sc-AxjAm hmYuEz sinoui-base-button sc-AxgMl iUNroa sinoui-radio sinoui-radio--checked"
=======
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 jWyvYy sinoui-radio sinoui-radio--checked"
>>>>>>> origin/bottomNavigation
    color="secondary"
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
<<<<<<< HEAD
      className="sc-AxirZ eBpvqz sinoui-svg-icon"
=======
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <input
      checked={true}
<<<<<<< HEAD
      className="sc-AxheI ipwklB sinoui-radio__input"
=======
      className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
      onChange={[Function]}
      type="radio"
    />
  </span>,
  <span
    checked={true}
<<<<<<< HEAD
    className="sc-AxjAm hmYuEz sinoui-base-button sc-AxgMl kdQsff sinoui-radio sinoui-radio--checked"
=======
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 dKiJtL sinoui-radio sinoui-radio--checked"
>>>>>>> origin/bottomNavigation
    color="error"
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
<<<<<<< HEAD
      className="sc-AxirZ eBpvqz sinoui-svg-icon"
=======
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <input
      checked={true}
<<<<<<< HEAD
      className="sc-AxheI ipwklB sinoui-radio__input"
=======
      className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
      onChange={[Function]}
      type="radio"
    />
  </span>,
  <span
    checked={true}
<<<<<<< HEAD
    className="sc-AxjAm hmYuEz sinoui-base-button sc-AxgMl iEwLxC sinoui-radio sinoui-radio--checked"
=======
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 bQVcrm sinoui-radio sinoui-radio--checked"
>>>>>>> origin/bottomNavigation
    color="warning"
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
<<<<<<< HEAD
      className="sc-AxirZ eBpvqz sinoui-svg-icon"
=======
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <input
      checked={true}
<<<<<<< HEAD
      className="sc-AxheI ipwklB sinoui-radio__input"
=======
      className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
      onChange={[Function]}
      type="radio"
    />
  </span>,
  <span
    checked={true}
<<<<<<< HEAD
    className="sc-AxjAm hmYuEz sinoui-base-button sc-AxgMl eFRzFq sinoui-radio sinoui-radio--checked"
=======
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 fkMqQm sinoui-radio sinoui-radio--checked"
>>>>>>> origin/bottomNavigation
    color="success"
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
<<<<<<< HEAD
      className="sc-AxirZ eBpvqz sinoui-svg-icon"
=======
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <input
      checked={true}
<<<<<<< HEAD
      className="sc-AxheI ipwklB sinoui-radio__input"
=======
      className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
      onChange={[Function]}
      type="radio"
    />
  </span>,
  <span
    checked={true}
<<<<<<< HEAD
    className="sc-AxjAm hmYuEz sinoui-base-button sc-AxgMl cieMBe sinoui-radio sinoui-radio--checked"
=======
    className="BaseButton__BaseButtonLayout-wk8p17-0 ibgUtO sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 ldQkwa sinoui-radio sinoui-radio--checked"
>>>>>>> origin/bottomNavigation
    color="info"
    tabIndex="0"
  >
    <svg
      aria-hidden="true"
<<<<<<< HEAD
      className="sc-AxirZ eBpvqz sinoui-svg-icon"
=======
      className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
      focusable="false"
      role="presentation"
      size={24}
      viewBox="0 0 24 24"
    >
      <path
        d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <input
      checked={true}
<<<<<<< HEAD
      className="sc-AxheI ipwklB sinoui-radio__input"
=======
      className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
      onChange={[Function]}
      type="radio"
    />
  </span>,
]
`;

exports[`Radio组件 快照测试 设置只读 1`] = `
Array [
  <label
<<<<<<< HEAD
    className="sc-AxhCb sc-AxhUy ddNrMj sinoui-form-control-label"
=======
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 AQksP sinoui-form-control-label"
>>>>>>> origin/bottomNavigation
    disabled={true}
  >
    <span
      checked={false}
<<<<<<< HEAD
      className="sc-AxjAm gIJowi sinoui-base-button sc-AxgMl fBbXlr sinoui-radio sinoui-radio--disabled"
=======
      className="BaseButton__BaseButtonLayout-wk8p17-0 GZpaL sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio sinoui-radio--disabled"
>>>>>>> origin/bottomNavigation
      color="primary"
      disabled={true}
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
<<<<<<< HEAD
        className="sc-AxirZ eBpvqz sinoui-svg-icon"
=======
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
<<<<<<< HEAD
        className="sc-AxheI ipwklB sinoui-radio__input"
=======
        className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
        disabled={true}
        onChange={[Function]}
        type="radio"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框1
    </span>
  </label>,
  <label
<<<<<<< HEAD
    className="sc-AxhCb sc-AxhUy ddNrMj sinoui-form-control-label"
=======
    className="FormControlLabelContainer__Label-sc-136va0i-0 FormControlLabelContainer-sc-136va0i-1 AQksP sinoui-form-control-label"
>>>>>>> origin/bottomNavigation
    readOnly={true}
  >
    <span
      checked={false}
<<<<<<< HEAD
      className="sc-AxjAm gIJowi sinoui-base-button sc-AxgMl fBbXlr sinoui-radio sinoui-radio--readOnly"
=======
      className="BaseButton__BaseButtonLayout-wk8p17-0 GZpaL sinoui-base-button RadioButton__ToggleButton-sc-7ebnoo-0 llRTtz sinoui-radio sinoui-radio--readOnly"
>>>>>>> origin/bottomNavigation
      color="primary"
      disabled={true}
      tabIndex="0"
    >
      <svg
        aria-hidden="true"
<<<<<<< HEAD
        className="sc-AxirZ eBpvqz sinoui-svg-icon"
=======
        className="SvgIcon-sc-1015m7s-0 kTyazq sinoui-svg-icon"
>>>>>>> origin/bottomNavigation
        focusable="false"
        role="presentation"
        size={24}
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
<<<<<<< HEAD
        className="sc-AxheI ipwklB sinoui-radio__input"
=======
        className="RadioButton__StyleInput-sc-7ebnoo-1 cVfeND sinoui-radio__input"
>>>>>>> origin/bottomNavigation
        onChange={[Function]}
        readOnly={true}
        type="radio"
      />
    </span>
    <span
      className="sinoui-form-control-label__title"
    >
      单选框2
    </span>
  </label>,
]
`;
